--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
-    <link rel="icon" href="src/assets/bodymoml.png">
+    <link rel="icon" href="src/assets/help.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BodyMom</title>
+    <title>Help Me Please</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.css" rel="stylesheet" />
   </head>
   <body>
